# fusion-invenio-demo

./: LICENSE
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
fusion-invenio-v11/: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-compose.yml  docker-services.yml  invenio.cfg
fusion-invenio-v11/docker/nginx/: test.crt  test.key
fusion-invenio-v11/docker/pgadmin/: servers.json
fusion-invenio-v11/site/: .gitkeep  setup.cfg
fusion-invenio-v11/site/fusion_invenio_v11/: views.py  webpack.py
fusion-research-data/: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
fusion-research-data/docker/nginx/: test.crt  test.key
fusion-research-data/docker/pgadmin/: servers.json
fusion-research-data/docker/uwsgi/: uwsgi_rest.ini  uwsgi_ui.ini
