
[metadata]
name = fusion-invenio-v11

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    fusion_invenio_v11_views = fusion_invenio_v11.views:create_blueprint
invenio_assets.webpack =
    fusion_invenio_v11_theme = fusion_invenio_v11.webpack:theme
